--- a/Detritus_missing.Rmd
+++ b/Detritus_missing.Rmd
@@ -342,7 +342,7 @@ plot((sinn$dead_leaves)~(sinn$fpom_g))
 sinn$detover150<-sinn$fpom_g+sinn$cpom_g+sinn$dead_leaves
 
 
-sinn_predict_big <- glm(log(detover150)~log(fpom_g), data=sinn))#sinnamary based eqn has rsq of 0.59
+sinn_predict_big <- glm(log(detover150)~log(fpom_g), data=sinn)#sinnamary based eqn has rsq of 0.59
 
 sinn_predict_big %>% 
   kable_table()
@@ -384,5 +384,11 @@ detritus_wider_fg_filled <- detritus_wider_fg_fixed %>%
   mutate(detritus0_150 = ifelse(dataset_id==216, (fpom_mg/1000), detritus0_150))%>%
   mutate(detritus150_20000 = ifelse(dataset_id==216, cpom_frenchguiana(detritus0_150), detritus150_20000))%>%
   mutate(detritus20000_NA= ifelse(dataset_id==216, largedet_frenchguiana(detritus0_150), detritus20000_NA))
+```
+
+```{r results="asis"}
+
+ff <- daff::render_diff(daff::diff_data(detritus_wider_fg_fixed, detritus_wider), view = FALSE)
+cat(ff)
 ```
 
